--- a/index.html
+++ b/index.html
@@ -3,25 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>roblox.scam</title>
+    <title>MySpace Profile</title>
     <style>
         body {
-            background-color: #121212;
-            color: #FFFFFF;
-            font-family: Arial, sans-serif;
+            background-image: url('https://images.pexels.com/photos/97492/pexels-photo-97492.jpeg'); /* Example background pattern */
+            color: #ffffff;
+            font-family: "Comic Sans MS", cursive, sans-serif;
             margin: 0;
+            padding: 0;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            background-color: rgba(0, 0, 0, 0.8);
             padding: 20px;
+            border: 2px solid #00ff00;
         }
         h1 {
-            color: #FFFFFF;
+            color: #ff00ff;
+            text-align: center;
+            text-shadow: 2px 2px 4px #000000;
+            margin-top: 20px;
         }
-        p {
-            color: #BBBBBB;
+        .profile-pic {
+            display: block;
+            margin: 0 auto;
+            border: 5px solid #00ff00;
+        }
+        .about-me {
+            background-color: #ff00ff;
+            padding: 10px;
+            margin-top: 20px;
+            border: 2px solid #00ff00;
+            text-align: center;
+        }
+        .friends {
+            margin-top: 20px;
+        }
+        .friends h2 {
+            color: #ff00ff;
+            text-shadow: 2px 2px 4px #000000;
+        }
+        .friend {
+            display: inline-block;
+            width: 100px;
+            margin: 10px;
+            text-align: center;
+        }
+        .friend img {
+            border: 3px solid #00ff00;
+            width: 100px;
+            height: 100px;
+        }
+        .friend p {
+            color: #00ff00;
+        }
+        .marquee {
+            color: #ff00ff;
+            font-size: 24px;
+            margin: 20px 0;
         }
     </style>
 </head>
 <body>
-    <h1>hi this is roblox developer send money to my cashapp for robux :) !!!</h1>
-    <p>i am david bazooka</p>
+    <div class="container">
+        <h1>MySpace Profile</h1>
+        <img src="https://m.media-amazon.com/images/I/51tYXyD5NHL._AC_UF1000,1000_QL80_.jpg" alt="Profile Picture" class="profile-pic">
+        <div class="about-me">
+            <h2>About Me</h2>
+            <p>im civ and ummmmmmmmmmm</p>
+        </div>
+        <div class="marquee">
+            <marquee>Welcome to my profile! Thanks for visiting!</marquee>
+        </div>
+        <div class="friends">
+            <h2>My Friends</h2>
+            <div class="friend">
+                <img src="https://via.placeholder.com/100" alt="Friend 1">
+                <p>Friend 1</p>
+            </div>
+            <div class="friend">
+                <img src="https://via.placeholder.com/100" alt="Friend 2">
+                <p>Friend 2</p>
+            </div>
+            <div class="friend">
+                <img src="https://via.placeholder.com/100" alt="Friend 3">
+                <p>Friend 3</p>
+            </div>
+            <div class="friend">
+                <img src="https://via.placeholder.com/100" alt="Friend 4">
+                <p>Friend 4</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
